--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -6,6 +6,14 @@
 appTitle=Employees
 
 #YDES: Application description
-appDescription=Employees List
+appDescription=Employees 
 #XTIT: Main view title
 title=Employees
+
+#Labels
+lablelEmployee=Employee
+lablelCountry=Country
+#CountryKeys
+CountryUS=United States
+CountryUK=United Kindom
+CountryES=Spain
