--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -29,3 +29,8 @@ btnFilter=Filter
 btnClearFilter= Clear Filter
 showCity=Show City
 hideCity=Hide City
+
+#Table Orders
+orderID=Order Id
+freight=Freight 
+shipAddress=Ship Address 
