--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -23,6 +23,7 @@ tableId=Employee Id
 tableName=Name
 tableCountry=Country
 tableCity=City
+tableShowDetails=Show Details
 
 #Labels Buttons
 btnFilter=Filter
@@ -34,3 +35,7 @@ hideCity=Hide City
 orderID=Order Id
 freight=Freight 
 shipAddress=Ship Address 
+
+#Dialog Orders
+orders=Orders
+close=Close
