--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -39,3 +39,20 @@ shipAddress=Ship Address
 #Dialog Orders
 orders=Orders
 close=Close
+
+#Layout
+layout=Layout
+employeeDetails=Employee Details
+
+#Employee Details
+employeeID= Employee ID
+titleEmployee=Title
+coutryCode= Country Code
+city=City 
+postalCode=Postal Code
+
+#Incidence
+incidence=Incidence
+europe=Europe 
+us=Unite States
+createIncidence=Create Incidence
