--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -56,3 +56,12 @@ incidence=Incidence
 europe=Europe 
 us=Unite States
 createIncidence=Create Incidence
+incidenceDate=Date 
+incidenceReason=Reason 
+incidenceType=Type 
+incidenceCorrect=Correct 
+incidencePending=Pending 
+incidenceError=Error 
+today=Today 
+tomorrow=Tomorrow 
+yesterday=Yesterday 
