--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -47,7 +47,7 @@ employeeDetails=Employee Details
 #Employee Details
 employeeID= Employee ID
 titleEmployee=Title
-coutryCode= Country Code
+countryCode=Country Code
 city=City 
 postalCode=Postal Code
 
@@ -65,3 +65,12 @@ incidenceError=Error
 today=Today 
 tomorrow=Tomorrow 
 yesterday=Yesterday 
+
+#oData  
+odataSaveOk=Incidence Saved 
+odataSaveKO=Incidence NOT Saved
+odataNoChanges=No changes 
+odataUpdateOk=Incidence Update 
+odataUpdateKO=Incidence NOT Update
+odataDeleteOK=Incidence Deleted
+odataDeleteKO=Incidence NOT Deleted
