--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -65,6 +65,8 @@ incidenceError=Error
 today=Today 
 tomorrow=Tomorrow 
 yesterday=Yesterday 
+errorCreationDateValue=Invalid Date
+confirmDeleteIncidence=Are you sure you want to delete the incidence?
 
 #oData  
 odataSaveOk=Incidence Saved 
