--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -79,3 +79,6 @@ odataUpdateOk=Incidence Update
 odataUpdateKO=Incidence NOT Update
 odataDeleteOK=Incidence Deleted
 odataDeleteKO=Incidence NOT Deleted
+
+#Signature
+clear=Clear
