--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -82,3 +82,11 @@ odataDeleteKO=Incidence NOT Deleted
 
 #Signature
 clear=Clear
+saveSignature=Save
+fillSignature=Please Sign the Order
+signatureSaved=Signature Saved 
+signatureNotSaved=Signature Not Saved
+
+#Order Details
+orderProducts=Products
+availableStock=Available Stock
